--- a/templates/accessoire/consulter.html.twig
+++ b/templates/accessoire/consulter.html.twig
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="left">
     <div class="image-container">
-            <img src="{{'../../image/' ~ instrument.CheminImage}}" alt="Instrument Image">
+            <img src="{{'../../image/' ~ accessoire.CheminImage}}" alt="Accessoire Image">
         </div>
     </div>
 </div>    
