--- a/templates/pret/consulter.html.twig
+++ b/templates/pret/consulter.html.twig
@@ -5,7 +5,7 @@
 
 <!-- Bouton de retour en haut à gauche -->
 <div class="back-button">
-    <a href="{{ path('pret_lister') }}" class="btn-back">
+    <a href="{{ path('pret_lister_eleve') }}" class="btn-back">
         <i class="fas fa-arrow-left"></i> Retour à la liste des prêts
     </a>
 </div>
