--- a/templates/professeur/consulter.html.twig
+++ b/templates/professeur/consulter.html.twig
@@ -16,7 +16,7 @@
         text-align: center;
         font-size: 2.5rem;
         margin-bottom: 20px;
-        color: #444;
+        color: green;
     }
 
     .planning {
@@ -29,7 +29,7 @@
         width: 100%;
         border-collapse: collapse;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        background: #fff;
+        background: #181B22;
         border-radius: 10px;
         overflow: hidden;
     }
@@ -53,15 +53,14 @@
 
     table td {
         font-size: 0.9rem;
-        color: #555;
+        color: white;
     }
 
     table td:hover {
-        background-color: #f9f9f9;
+        background-color: #313237;
         cursor: pointer;
     }
 
-    /* Popup Styles */
     .popup-overlay {
         display: none;
         position: fixed;
