suite url securise avec le role gestionnaire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,10 @@
             <li><a href="http://localhost/24lilian31/public/eleve/lister"><i class="fas fa-child"></i>&nbsp&nbsp Eleve</a></li>
             <li><a href="http://localhost/24lilian31/public/professeur/lister"><i class="fas fa-chalkboard-teacher"></i>&nbsp&nbsp Professeur</a></li>
             <li><a href="http://localhost/24lilian31/public/intervention/lister"><i class="fas fa-wrench"></i>&nbsp&nbsp Intervention</a></li>
+            <li><a href="http://localhost/24lilian31/public/professionnel/lister"><i class="fas fa-user-tie"></i>&nbsp;&nbsp; Professionnel</a></li>
+            <li><a href="http://localhost/24lilian31/public/accessoire/lister"><i class="fas fa-cogs"></i>&nbsp;&nbsp; Accessoire</a></li>
+
+
         </ul>
     
   
