--- a/templates/cours/modifier.html.twig
+++ b/templates/cours/modifier.html.twig
@@ -113,7 +113,7 @@ body {
 </style>
 
 <div class="ajouter-cours-form-container">
-    <h1 class="ajouter-cours-title-primary">Ajout d'un Cours</h1>
+    <h1 class="ajouter-cours-title-primary">Modification d'un Cours</h1>
     <div class="ajouter-cours-formulaire-ajout">
         <div class="ajouter-cours-left-column">
             {{ form_start(form) }}
