--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,7 @@
 .cours-container-recherche {
     position: absolute;
     top: 20px; 
+    margin-top:50px;
     right: 20px;
     display: flex;
     align-items: center;
